fix: card width on mobile

--- a/src/assets/sass/pages/Home/_Home-products.scss
+++ b/src/assets/sass/pages/Home/_Home-products.scss
@@ -79,7 +79,9 @@
       justify-content: center;
       margin-bottom: 3rem;
     }
+
     .card {
+      width: 100%;
       margin-bottom: 1.5rem;
     }
 
